# terra-blocklist

./: config.terrain.json  keys.terrain.js
contracts/cw20-blocklist/: Cargo.toml  NOTICE  README.md
contracts/cw20-blocklist/examples/: schema.rs
contracts/cw20-blocklist/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/cw20-blocklist/src/: README.md  contract.rs  error.rs  msg.rs  state.rs
lib/: index.js
