[package]
name = "cw20-blocklist"
version = "0.9.0"
authors = ["Jason Stallings <octalmage@users.noreply.github.com>"]
edition = "2018"
description = "cw20 token with basic blocklist functionality."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
uint = "=0.9.1"
cw0 = {  version = "0.9.0" }
cw2 = {  version = "0.9.0" }
cw20 = {  version = "0.9.0" }
cw-controllers = {  version = "0.9.0" }
cw20-base = {  version = "0.9.0", features = ["library"] }
cosmwasm-std = { version = "0.16.0", features = ["staking"] }
cw-storage-plus = {  version = "0.9.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true